--- a/Edge_Detection.ipynb
+++ b/Edge_Detection.ipynb
@@ -42,7 +42,7 @@
         "import numpy as np\n",
         "\n",
         "import requests\n",
-        "url = \"https://cdn.pixabay.com/photo/2017/05/17/12/42/tiger-2320819_960_720.jpg\"\n",
+        "url = https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.meesho.com%2Fchhatrapati-shivaji-maharaj%2Fp%2F1vec45&psig=AOvVaw3uXZT7CbXrUDHYoi3qVy4C&ust=1692774828546000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPjZ8OTb74ADFQAAAAAdAAAAABAE
         "r = requests.get(url)\n",
         "with open('test.jpg', 'wb') as f:\n",
         "    f.write(r.content)"
